# llm-lab

./: .env.example  .gitignore  LEARNING_LOG.md  README.md  pricing.toml  pyproject.toml
experiments/: day1_raw_call.py  exp1_context_budget.py  exp2_temperature_variance.py  exp3_latency_vs_tokens.py
src/llm_lab/: cli.py  context.py  cost.py
src/llm_lab/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
tests/: test_cost.py
